fix Product unit tests